<resources>
    <string name="app_name">Swappify</string>
    <string name="intro_page_one_title" >Title 1</string>
    <string name="intro_page_two_title" >Title 2</string>
    <string name="intro_page_three_title">Title 3</string>

    <string name="intro_page_one_desc" >Desc 1</string>
    <string name="intro_page_two_desc" >Desc 2</string>
    <string name="intro_page_three_desc">Desc 3</string>

    <!--LOG IN-->
    <string name="str_enter_mob_num">Enter your mobile number</string>
    <string name="str_verify_mob_num">Verify your mobile number</string>
    <string name="str_verifying_mob_num">Verifying your mobile number</string>
    <string name="str_send_otp_msg">We will send a 6-digit verification pin to your mobile number</string>
    <string name="str_sent_otp_msg">We have sent a 6-digit code to your number</string>
    <string name="str_enter_otp_msg">Please enter a 6-digit code that we just sent you!</string>

    <string name="str_sign_up">Sign up</string>
    <string name="str_next">Next</string>
    <string name="str_already_have_otp">In case already have OTP , click here</string>
    <string name="str_mobile_num">Phone number</string>
    <string name="str_country_code">Country code</string>
    <string name="str_otp_msg">We need to text you the otp to authenticate your account</string>
    <string name="str_enter_otp">Enter OTP</string>
    <string name="str_verify_otp">Verify OTP</string>
    <string name="str_resend_otp">Resend</string>
    <string name="str_verify_account">We have sent an OTP on your number</string>
    <string name="str_verify_number">Verify your number !</string>
    <string name="err_verify_number">Provide valid mobile number</string>
    <string name="err_invalid_phone">Invalid mobile number</string>
    <string name="str_otp_sent_msg">Please enter the verification code sent via sms to %s%s</string>
    <string name="err_invalid_otp">Invalid verification code</string>
    <string name="str_auto_verify">Please wait while we auto-verify your mobile number</string>
    <string name="str_remaining_time">Time remaining</string>
    <string name="str_time_counter">00:%d</string>
    <string name="str_mobile_number">%1$s%2$s</string>

    <!--Country-->
    <string name="str_choose_country">Select country</string>
    <string name="str_cancel">Cancel</string>

    <!--Multistate-->
    <string name="str_retry">Retry</string>
    <string name="str_no_countries">No countries available to choose</string>


    <!--Progress msgs-->
    <string name="msg_validating">Validating\u2026</string>
    <string name="msg_otp_read">%d Secs\u2026</string>
    <string name="msg_otp_resend">Re-sending OTP\u2026</string>
    <string name="msg_loading">Loading\u2026</string>

    <!--Add Game-->
    <string name="lorem">
		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
		In mollis est vitae erat laoreet consectetur. Mauris dui mauris,
		dictum vel egestas vel, porta sed ante. Phasellus congue viverra ipsum,
		in elementum arcu ultricies nec.Morbi tincidunt nisl lacinia, placerat nisi eget, luctus tortor.
		Morbi efficitur dictum leo, sit amet volutpat lorem sodales nec. Quisque et erat et turpis fringilla condimentum.
	</string>

    <string name="str_game_name">Game name</string>
    <string name="str_genre">Genre</string>
    <string name="str_developer">Developer</string>
    <string name="str_release_date">Release Date</string>
    <string name="str_publisher">Publisher</string>
    <string name="str_summary">Summary</string>

    <string name="str_clear">Clear</string>
    <string name="str_voice">Voice</string>
    <string name="str_search">Search</string>
    <string name="str_game_search_empty">Oops, Nothing found</string>

    <string name="str_searching">Searching for %s</string>
    <string name="str_platform_hint">Choose platform</string>
    <string name="str_information">Game Info</string>
    <string name="cannot_take_pic">Cannot take a new picture.\nPlease check if storage is mounted.</string>
    <string name="error_camera_permission">No Camera permission!</string>
    <string name="error_gallery_permission">No Gallery permission!</string>
    <string name="picker_header">Choose source</string>
    <string name="str_add_game">Add Game</string>
    <string name="err_valid_url">Add valid game cover</string>
    <string name="err_game_name">Provide valid Game Name</string>
    <string name="err_game_platform">Choose Platform</string>

    <string name="str_no_internet_title">No active internet connection</string>
    <string name="str_dismiss">Dismiss</string>
    <string name="str_something_wrong_msg">Something went wrong\u2026 Please try again</string>
    <string name="str_internet_title">Hurray, internet connection is back</string>

    <!--Profile -->
    <string name="str_country">Country</string>
    <string name="str_city">City</string>
    <string name="str_save_profile">Save profile</string>
    <string name="str_personal_info">Personal Info</string>
    <string name="err_location">Please provide your location</string>
    <string name="str_provide_location">Provide your location</string>
    <string name="str_location_info">Location will help to optimise the search and find gamers around you, whom you can share and play games.</string>
    <string name="str_your_name">Your name</string>
    <string name="err_your_name">Please enter your name</string>

    <string name="perm_location">We use Location Permission to know your location and optimised search to find Gamers and game around you</string>
    <string name="perm_sms">We use SMS Permission for detecting verification codes sent by GameCreed.</string>
    <string name="perm_telephony">android.provider.Telephony.SMS_RECEIVED</string>
    <string name="perm_image">We use Camera to capture snapshots for uploading your Profile/Games images</string>
    <string name="str_profile">Profile</string>
    <string name="str_games">Games</string>
    <string name="str_chat">Chat</string>


</resources>
