<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">


    <ImageView
        style="@style/AppTheme.ImageView.icon_96"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_color_white_full_normal" />


    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        style="@style/AppTheme.Widget.CardView.Full"
        android:layout_marginBottom="@dimen/dimen_0"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                style="@style/AppTheme.Widget.TextView.Secondary.Regular"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_16"
                android:gravity="center_horizontal"
                android:text="@string/str_otp_msg"
                android:textSize="@dimen/font_16" />


            <android.support.design.widget.TextInputLayout
                style="@style/AppTheme.TextInputLayout.First.Child"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <android.support.design.widget.TextInputEditText
                    style="@style/AppTheme.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_country_code"
                    android:maxLines="1"
                    android:minEms="10" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/AppTheme.TextInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/dimen_26">

                <android.support.design.widget.TextInputEditText
                    style="@style/AppTheme.EditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/str_mobile_num"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:minEms="10" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/nextButton"
                style="@style/AppTheme.Button.Raised"
                android:text="@string/str_next" />

        </LinearLayout>


    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>