<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="swapp.items.com.swappify.controllers.signup.model.SignUpLogInViewModel" />
    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">


        <ImageView
            android:id="@+id/imageView"
            style="@style/AppTheme.ImageView.icon_96"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/btn_color_white_full_normal" />


        <TextView
            android:id="@+id/textView3"
            style="@style/AppTheme.Widget.TextView.Primary.Bold.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen_30"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:gravity="center_horizontal"
            android:text="@string/str_otp_msg"
            android:textSize="@dimen/font_18"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            style="@style/AppTheme.Widget.CardView.Compat"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/resendOtpButton"
                    style="@style/AppTheme.Button.Borderless"
                    android:layout_alignParentRight="true"
                    android:text="@string/str_resend_otp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/otpInputLayout"
                    style="@style/AppTheme.TextInputLayout.First.Child"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true">

                    <android.support.design.widget.TextInputEditText
                        style="@style/AppTheme.EditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_enter_otp"
                        android:maxLines="1"
                        android:minEms="10"
                        android:textAlignment="center" />

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/verifyOtpButton"
                    style="@style/AppTheme.Button.Raised"
                    android:layout_below="@id/otpInputLayout"
                    android:text="@string/str_verify_otp" />


            </RelativeLayout>


        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>

</layout>
