<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="swapp.items.com.swappify.controllers.signup.viewModel.SignUpLogInViewModel" />

        <variable
            name="editTextConfig"
            type="swapp.items.com.swappify.controllers.configs.EditTextConfiguration" />

    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageView"
            style="@style/AppTheme.ImageView.icon_96"
            android:layout_marginBottom="@dimen/dimen_60"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/btn_color_white_full_normal" />


        <TextView
            android:id="@+id/textView3"
            style="@style/AppTheme.Widget.TextView.Primary.Bold.White"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen_30"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:gravity="center_horizontal"
            android:text="@string/str_otp_msg"
            android:textSize="@dimen/font_18"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            style="@style/AppTheme.Widget.CardView.Compat"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/phoneNumContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_16"
                    android:layout_marginRight="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:gravity="center_vertical">


                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/countryCode"
                        style="@style/AppTheme.Widget.TextView.Primary.Bold"
                        android:background="?android:attr/selectableItemBackground"
                        android:drawableEnd="@drawable/vc_down_cheveron_grey"
                        android:drawablePadding="@dimen/dimen_4"
                        android:drawableRight="@drawable/vc_down_cheveron_grey"
                        android:minHeight="@dimen/dimen_48"
                        android:onClick="@{() -> viewModel.onCodeClick()}"
                        android:text="@{viewModel.countryCode}"
                        android:textSize="@dimen/font_16"
                        tools:text="+91" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/phoneNumInputLayout"
                        style="@style/AppTheme.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/countryCode"
                        android:layout_toRightOf="@id/countryCode"
                        android:minHeight="@dimen/dimen_48"
                        android:paddingBottom="@dimen/dimen_12">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/phoneNumEditText"
                            style="@style/AppTheme.EditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:hint="@string/str_mobile_num"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:minEms="10"
                            android:text="@{viewModel.mobileNumber}"
                            bind:editTextConfig="@{editTextConfig}" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>


                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/errorMsg"
                    style="@style/AppTheme.Widget.TextView.Error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phoneNumContainer"
                    android:layout_marginBottom="@dimen/dimen_16"
                    android:layout_marginLeft="@dimen/dimen_16"
                    android:layout_marginRight="@dimen/dimen_16"
                    android:text="@string/err_verify_number"
                    android:visibility="@{viewModel.enableErrorMsg ? View.VISIBLE : View.GONE}"
                    tools:visibility="gone" />


                <Button
                    android:id="@+id/nextButton"
                    style="@style/AppTheme.Button.Raised"
                    android:layout_below="@id/errorMsg"
                    android:enabled="@{viewModel.enableNxtBtn}"
                    android:onClick="@{() -> viewModel.onNextClick(viewModel.countryCode.get(), viewModel.mobileNumber.get())}"
                    android:text="@string/str_next" />


            </RelativeLayout>


        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>
</layout>