<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="swapp.items.com.swappify.controllers.signup.model.SignUpLogInViewModel" />
    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">


        <ImageView
            android:id="@+id/imageView"
            style="@style/AppTheme.ImageView.icon_96"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/btn_color_white_full_normal" />


        <TextView
            android:id="@+id/textView3"
            style="@style/AppTheme.Widget.TextView.Primary.Bold.White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen_30"
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_marginRight="@dimen/dimen_16"
            android:gravity="center_horizontal"
            android:text="@string/str_otp_msg"
            android:textSize="@dimen/font_18"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            style="@style/AppTheme.Widget.CardView.Compat"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <TextView
                        android:id="@+id/countryCode"
                        style="@style/AppTheme.Widget.TextView.Primary.Bold"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:onClick="@{() -> viewModel.onCodeClick()}"
                        android:textSize="@dimen/font_16"
                        tools:text="+91" />

                    <ImageView
                        android:id="@+id/arrowDown"
                        android:layout_width="@dimen/dimen_10"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/countryCode"
                        android:layout_toRightOf="@id/countryCode"
                        app:srcCompat="@drawable/ic_down_cheveron_system_grey" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/phoneNumInputLayout"
                        style="@style/AppTheme.TextInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="@dimen/dimen_26"
                        android:layout_toEndOf="@id/arrowDown"
                        android:layout_toRightOf="@id/arrowDown">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/phoneNumEditText"
                            style="@style/AppTheme.EditText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:hint="@string/str_mobile_num"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:minEms="10" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>


                <Button
                    android:id="@+id/nextButton"
                    style="@style/AppTheme.Button.Raised"
                    android:onClick="@{() -> viewModel.onPhoneVerificationClick()}"
                    android:text="@string/str_next" />

            </LinearLayout>


        </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>
</layout>